@@ -11,15 +11,13 @@ public interface NamedRenderer {
 	/**
 	 * Renders an object of a type supported by the renderer.
 	 * 
-	 * @param context
-	 *            current context during template evaluation
 	 * @param o
 	 *            the object to render
 	 * @param format
 	 *            anything that tells the renderer how to do its work
 	 * @return the rendered object
 	 */
-	public String render(TemplateContext context, Object o, String format);
+	public String render(Object o, String format);
 
 	/**
 	 * Gets the name of the renderer.
